syntax = "proto3";

package proto_file;
option go_package = "./;proto_file";

message MetaData {
    string name = 1;
    string type = 2;
    int64 size = 3;
    string group = 4;
    string backet = 5;
}

message File {
    bytes content = 1;
}

message FileUploadRequest {
    oneof request {
        MetaData metadata = 2;
        File file = 1;
    }
}

message FileUploadResponse {
    string id = 1;
    string name = 2;
    string origName = 3;
    string url = 4;
}

message FileDownloadRequest {
    string id = 1;
    string backet = 2;
    string group = 3;
    string name = 4;
}

message GroupDownloadRequest {
    string backet = 1;
    string group = 2;
}

message FileDownloadResponse {
    oneof response {
        MetaData metadata = 1;
        File file = 2;
    }
}

message FileDeleteRequest {
    string id = 1;
    string backet = 2;
    string group = 3;
    string name = 4;
}

message FileDeleteResponse {
    string message = 1;
}

message PingRequest {}
message PingResponse {
    string ping = 1;
}

service FileService {
    rpc Ping (PingRequest) returns (PingResponse);
    rpc Download (FileDownloadRequest) returns (stream FileDownloadResponse);
    rpc GroupDownload (GroupDownloadRequest) returns (stream FileDownloadResponse);
    rpc Upload (stream FileUploadRequest) returns (FileUploadResponse);
    rpc Delete (FileDeleteRequest) returns (FileDeleteResponse);
}